last of the blogposts!

--- a/index.html
+++ b/index.html
@@ -58,42 +58,42 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="img/webdesignmeme.jpg" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+            <h2 class="card-title">Why Web Design is Important</h2>
+            <p class="card-text">Your website’s design is an very important part of your online presence, and can be essential to building a business.</p>
             <a href="post2.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
-            Posted on February 4, 2020 by
+            Posted on March 12, 2020 by
             <a href="#">Delaney Harrison</a>
           </div>
         </div>
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="img/oculusquest.jpg" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+            <h2 class="card-title">Oculus Quest</h2>
+            <p class="card-text">I have loved every experience I have had with this technology, however I will be listing some pros and cons for this product.</p>
             <a href="post3.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
-            Posted on February 4, 2020 by
+            Posted on March 21, 2020 by
             <a href="#">Delaney Harrison</a>
           </div>
         </div>
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="img/angularmeme.jpeg" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+            <h2 class="card-title">Angular Development</h2>
+            <p class="card-text">Every technology comes with certain pros and cons. In this blogpost, we will take a closer look at the advantages and disadvantages of Angular.</p>
             <a href="post4.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
-            Posted on February 4, 2020 by
+            Posted on April 10, 2020 by
             <a href="#">Delaney Harrison</a>
           </div>
         </div>
