--- a/post2.html
+++ b/post2.html
@@ -39,7 +39,7 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Why UX Research is important</h1>
+        <h1 class="mt-4">Why Web Design is Important</h1>
 
         <!-- Author -->
         <p class="lead">
@@ -50,38 +50,43 @@
         <hr>
 
         <!-- Date/Time -->
-        <p>Posted on February 4, 2020 </p>
+        <p>Posted on March 12, 2020 </p>
 
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="img/uximage.png" alt="">
+        <img class="img-fluid rounded" style="display: block; margin-left: auto; margin-right: auto; width: 50%;" src="img/webdesignmeme.jpg" alt="">
 
         <hr>
 
         <!-- Post Content -->
-        <p class="lead">Why UX Research?</p>
+        <p class="lead">Why Web Design?</p>
 
-        <p>User research is the initial stage and one of the most significant activities of a product-design cycle. All of your team’s hard work, time, and money will be for nothing if you end up making something that nobody wants to use. User research should always come before UX strategy because it helps eliminate unwarranted assumptions from the design process. It also helps you to find the right people to enable you to move your product forward, make any necessary changes, and continue iterating on your product design. UX Research is essential, don't let anyone tell you any different!</p>
+        <p>66% of people would rather see something well designed online versus something plain and simple if given a short period of time to view the website. Your website’s design is an very important part of your online presence, and can be essential to building a business. In order to build a successful website for your business, you must first understand the importance of web design and how it applies to our world.</p>
 
-        <p>By using various user-research techniques during this phase, you can better understand users and their needs, which helps your team to identify product requirements.</p>
+        <p>The following list are a few key essential points as to why web design is so important, and why it is so desperately needed.</p>
 
         <ul>
-          <li>Competitive Analysis</li>
-          <li>Focus Groups</li>
-          <li>Surveys</li>
-          <li>Contextual Inquiry</li>
-          <li>Card Sorting</li>
-          <li>Journey Mapping</li>
-          <li>The Creation of Personas and Scenarios</li>
-          <li>Participatory Design</li>
-          <li>Joint Application Development (JAD) sessions</li>
-          <li>A/B testing</li>
-          <li>Design Critiques</li>
-          <li>Eyetracking</li>
-          <li>Usability Testing</li>
+          <li>SEO (Search Engine Optimization), when searching for your business/organization your website will come up!</li>
+          <li>Shows how you accomodate to your customers and how well you may treat them according to a study </li>
+          <li>It sets the first impression, how do you want your business to be viewed?</li>
+          <li>Put up a fight to your competitors, you want to win over your competition! Give your users and consumers just reason to use you over someone else</li>
+          <li>Build trust with your users/customers</li>
+          <li>Stay consistent, provide a great overall experience!</li>
+          <li>Increased web traffic</li>
+          <li>Better usability</li>
+          <li>It just looks better... enough said</li>
         </ul>
 
+        <p>Important qualities of good web design:</p>
+        <ul>
+          <li>Universal toolkit for use across pages</li>
+          <li>Easy navigation</li>
+          <li>Responsive Design</li>
+          <li>Page speed</li>
+          <li>Interactivity</li>
+          <li>CTA (Call to Action) Buttons</li>
+        </ul>
         <hr>
 
       </div>
@@ -97,23 +102,23 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">User Experience</a>
+                    <a href="#">Web Design</a>
                   </li>
                   <li>
-                    <a href="#">Research</a>
+                    <a href="#">Consistency</a>
                   </li>
                   <li>
-                    <a href="#">Methods</a>
+                    <a href="#">Experience</a>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Evaluative</a>
+                    <a href="#">Responsive</a>
                   </li>
                   <li>
-                    <a href="#">Processes</a>
+                    <a href="#">Toolkit</a>
                   </li>
                 </ul>
               </div>
