--- a/post4.html
+++ b/post4.html
@@ -39,7 +39,7 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Why UX Research is important</h1>
+        <h1 class="mt-4">Angular Development</h1>
 
         <!-- Author -->
         <p class="lead">
@@ -50,36 +50,33 @@
         <hr>
 
         <!-- Date/Time -->
-        <p>Posted on February 4, 2020 </p>
+        <p>Posted on April 10, 2020 </p>
 
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="img/uximage.png" alt="">
+        <img class="img-fluid rounded" style="display: block; margin-left: auto; margin-right: auto; width: 50%;" src="img/angularmeme.jpeg" alt="">
 
         <hr>
 
         <!-- Post Content -->
-        <p class="lead">Why UX Research?</p>
+        <p class="lead">Angular Development Benefits and Drawbacks</p>
 
-        <p>User research is the initial stage and one of the most significant activities of a product-design cycle. All of your team’s hard work, time, and money will be for nothing if you end up making something that nobody wants to use. User research should always come before UX strategy because it helps eliminate unwarranted assumptions from the design process. It also helps you to find the right people to enable you to move your product forward, make any necessary changes, and continue iterating on your product design. UX Research is essential, don't let anyone tell you any different!</p>
+        <p>An Angular framework makes it easy to develop web applications. Combining dependency injection, declarative templates, end-to-end tooling, and integrated best practices, it solves almost all the challenges when creating a web app.</p>
 
-        <p>By using various user-research techniques during this phase, you can better understand users and their needs, which helps your team to identify product requirements.</p>
+        <p>Pros:</p>
 
         <ul>
-          <li>Competitive Analysis</li>
-          <li>Focus Groups</li>
-          <li>Surveys</li>
-          <li>Contextual Inquiry</li>
-          <li>Card Sorting</li>
-          <li>Journey Mapping</li>
-          <li>The Creation of Personas and Scenarios</li>
-          <li>Participatory Design</li>
-          <li>Joint Application Development (JAD) sessions</li>
-          <li>A/B testing</li>
-          <li>Design Critiques</li>
-          <li>Eyetracking</li>
-          <li>Usability Testing</li>
+          <li>Modules. There are a number of ways to add different elements to a module. Angular solves the problem of global function exploitation by limiting the scope of all functions to the module, in which it was defined and used.</li>
+          <li>Model-View-Controller architecture, it is possible to isolate the app logic from the UI layer and support separation of concerns. The controller receives all requests for the app and operates with the model to prepare any data needed by the view. The view uses the data prepared by the controller and displays a final presentable response.</li>
+          <li>Enhanced Design Architecture. Angular simplifies the way of managing these components even if a new programmer joins the project after the development process has already begun. The architecture is built in such a way that helps the programmer to locate and develop the code easily.</li>
+        </ul>
+
+        <p>Cons:</p>
+        <ul>
+          <li>Steep learning curve, takes a while to pickup exactly what commands to use and how to organize things</li>
+          <li>Limited SEO options and poor accessibility for search engine crawlers.</li>
+          <li>CLI documentation does not have enough detailing. I spent more time searching how-to threads than I did on their actual documentation </li>
         </ul>
 
         <hr>
@@ -97,10 +94,10 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">User Experience</a>
+                    <a href="#">Angular</a>
                   </li>
                   <li>
-                    <a href="#">Research</a>
+                    <a href="#">Development</a>
                   </li>
                   <li>
                     <a href="#">Methods</a>
