--- a/post3.html
+++ b/post3.html
@@ -39,7 +39,7 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Why UX Research is important</h1>
+        <h1 class="mt-4">The Oculus Quest</h1>
 
         <!-- Author -->
         <p class="lead">
@@ -50,36 +50,39 @@
         <hr>
 
         <!-- Date/Time -->
-        <p>Posted on February 4, 2020 </p>
+        <p>Posted on March 21, 2020 </p>
 
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="img/uximage.png" alt="">
+        <img class="img-fluid rounded" src="img/oculusquest.jpg" alt="">
 
         <hr>
 
         <!-- Post Content -->
-        <p class="lead">Why UX Research?</p>
+        <p class="lead">Oculus Quest</p>
 
-        <p>User research is the initial stage and one of the most significant activities of a product-design cycle. All of your team’s hard work, time, and money will be for nothing if you end up making something that nobody wants to use. User research should always come before UX strategy because it helps eliminate unwarranted assumptions from the design process. It also helps you to find the right people to enable you to move your product forward, make any necessary changes, and continue iterating on your product design. UX Research is essential, don't let anyone tell you any different!</p>
+        <p>I personally love virtual reality. Any chance I can get to get my hands on a headset, I will take. I recently was able to get the Oculus Quest and be able to play some games such as Beat Saber and Vader Immortal Episode I.</p>
 
-        <p>By using various user-research techniques during this phase, you can better understand users and their needs, which helps your team to identify product requirements.</p>
+        <p>I have loved every experience I have had with this technology, however I will be listing some pros and cons for this product.</p>
+
+        <p>Pros:</p>
 
         <ul>
-          <li>Competitive Analysis</li>
-          <li>Focus Groups</li>
-          <li>Surveys</li>
-          <li>Contextual Inquiry</li>
-          <li>Card Sorting</li>
-          <li>Journey Mapping</li>
-          <li>The Creation of Personas and Scenarios</li>
-          <li>Participatory Design</li>
-          <li>Joint Application Development (JAD) sessions</li>
-          <li>A/B testing</li>
-          <li>Design Critiques</li>
-          <li>Eyetracking</li>
-          <li>Usability Testing</li>
+          <li>No wires! Easier to move around</li>
+          <li>Camera for being able to see with the headset on while making the boundary</li>
+          <li>Boundary memory storage for the space you are in</li>
+          <li>Easy to download games, using the Oculus app on your phone</li>
+          <li>The audience can view what the player is seeing through casting onto the phone</li>
+        </ul>
+
+        <p>Cons:</p>
+        <ul>
+          <li>Battery life, only lasts about 1.5 hours</li>
+          <li>Limited Storage</li>
+          <li>Stay away from sunlight! The quest may misinterpret the boundaries for the guaridan</li>
+          <li>Expensive: ~$300</li>
+          <li>Limited games, yet to be developed for Quest</li>
         </ul>
 
         <hr>
@@ -97,23 +100,23 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">User Experience</a>
+                    <a href="#">Oculus Quest</a>
                   </li>
                   <li>
-                    <a href="#">Research</a>
+                    <a href="#">Virtual Reality</a>
                   </li>
                   <li>
-                    <a href="#">Methods</a>
+                    <a href="#">Immersive</a>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Evaluative</a>
+                    <a href="#">Experience</a>
                   </li>
                   <li>
-                    <a href="#">Processes</a>
+                    <a href="#">Gaming</a>
                   </li>
                 </ul>
               </div>
